src/objects/SubjectYearKPI__c.object
<CustomObject>
    <description>Records to be created each year to reflect Tutor Trust KPIs for that year, split by subject and year. 

Oscar Mawby @ Impact Box 12/12/19</description>
    <fields>
        <fullName>AcademicYear__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Academic Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2015-16</fullName>
                </value>
                <value>
                    <fullName>2016-17</fullName>
                </value>
                <value>
                    <fullName>2017-18</fullName>
                </value>
                <value>
                    <fullName>2018-19</fullName>
                </value>
                <value>
                    <fullName>2019-20</fullName>
                </value>
                <value>
                    <fullName>2020-21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendanceKPI__c</fullName>
        <description>Created by Oscar @ Impact Box, 18/08/2020</description>
        <label>Attendance KPI</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SubjectYearNumber__c</fullName>
        <description>For the purposes of migration</description>
        <label>Subject Year Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalPupils__c</fullName>
        <description>All Pupils in Cohorts</description>
        <label># Total Pupils</label>
        <summarizedField>Cohort__c.NumberofPupils__c</summarizedField>
        <summaryForeignKey>Cohort__c.SubjectYearKPI__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Subject Year KPI</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject Year KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subject Year KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>